--- a/tempelate/index.html
+++ b/tempelate/index.html
@@ -41,9 +41,12 @@
             padding: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
-            display: none;
+            display: inline-block;
             overflow-wrap: break-word;
             clear: both;
+            color: black;
+            overflow-y: auto;
+            overflow-x: scroll;
         }
 
         .bot-message {
@@ -54,6 +57,8 @@
             max-width: 70%;
             float: right;
             clear: right;
+            color: #000;
+            font-weight: bold;
         }
 
         #message-form {
