--- a/tempelate/index.html
+++ b/tempelate/index.html
@@ -1,253 +1,272 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Rasa Chatbot</title>
     <style>
-            body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+      }
 
-        #chat-container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+      #chat-container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
 
-        #messages {
-            margin-bottom: 20px;
-            overflow-y: auto;
-            max-height: 300px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
+      #messages {
+        margin-bottom: 20px;
+        overflow-y: auto;
+        max-height: 300px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+      }
 
-        .user-message {
-            background-color: #dcf8c6;
-            padding: 10px;
-            border-radius: 5px;
-            margin: 5px;
-            max-width: 70%;
-            float: left;
-            clear: left;
-        }
-        #text-output {
-            margin-top: 10px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            display: inline-block;
-            overflow-wrap: break-word;
-            clear: both;
-            color: black;
-            overflow-y: auto;
-            overflow-x: scroll;
-        }
+      .user-message {
+        background-color: #dcf8c6;
+        padding: 10px;
+        border-radius: 5px;
+        margin: 5px;
+        max-width: 70%;
+        float: left;
+        clear: left;
+      }
+      #text-output {
+        margin-top: 10px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        display: inline-block;
+        overflow-wrap: break-word;
+        clear: both;
+        color: black;
+        overflow-y: auto;
+        overflow-x: scroll;
+      }
 
-        .bot-message {
-            background-color: #c6f0dc;
-            padding: 10px;
-            border-radius: 5px;
-            margin: 5px;
-            max-width: 70%;
-            float: right;
-            clear: right;
-            color: #000;
-            font-weight: bold;
-        }
+      .bot-message {
+        background-color: #c6f0dc;
+        padding: 10px;
+        border-radius: 5px;
+        margin: 5px;
+        max-width: 70%;
+        float: right;
+        clear: right;
+        color: #000;
+        font-weight: bold;
+      }
 
-        #message-form {
-            display: flex;
-        }
+      #message-form {
+        display: flex;
+      }
 
-        #message-input {
-            flex: 1;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px 0 0 5px;
-        }
+      #message-input {
+        flex: 1;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px 0 0 5px;
+      }
 
-        #voice-input-button {
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 0 5px 5px 0;
-            background-color: #4caf50;
-            color: #fff;
-            cursor: pointer;
-        }
+      #voice-input-button {
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 0 5px 5px 0;
+        background-color: #4caf50;
+        color: #fff;
+        cursor: pointer;
+      }
 
-        #voice-output {
-            margin-top: 10px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            display: none;
-        }
-      </style>
-</head>
-<body>
+      #voice-output {
+        margin-top: 10px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        display: none;
+      }
+    </style>
+  </head>
+  <body>
     <div id="chat-container">
-        <div id="messages"></div>
-        <form id="message-form">
-            <input type="text" id="message-input" placeholder="Type your message here...">
-            <button type="submit">Send</button>
-            <button id="voice-input-button">Voice Input</button>
-        </form>
+      <div id="messages"></div>
+      <form id="message-form">
+        <input
+          type="text"
+          id="message-input"
+          placeholder="Type your message here..."
+        />
+        <button type="submit">Send</button>
+        <button id="voice-input-button">Voice Input</button>
+      </form>
     </div>
     <div id="voice-output"></div>
     <div id="text-output"></div>
 
     <script>
-        // Get elements
-        const chatContainer = document.getElementById('chat-container');
-        const messagesDiv = document.getElementById('messages');
-        const messageForm = document.getElementById('message-form');
-        const messageInput = document.getElementById('message-input');
-        const voiceInputButton = document.getElementById('voice-input-button');
-        const voiceOutput = document.getElementById('voice-output');
-        const textOutput = document.getElementById('text-output');
+      // Get elements
+      const chatContainer = document.getElementById("chat-container");
+      const messagesDiv = document.getElementById("messages");
+      const messageForm = document.getElementById("message-form");
+      const messageInput = document.getElementById("message-input");
+      const voiceInputButton = document.getElementById("voice-input-button");
+      const voiceOutput = document.getElementById("voice-output");
+      const textOutput = document.getElementById("text-output");
+      const botMsg = document.getElementById("bot-message");
 
-        // Send message
-        messageForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const message = messageInput.value.trim();
-            if (message.length > 0) {
-                // Add message to chat
-                const messageElement = document.createElement('div');
-                messageElement.textContent = message;
-                messageElement.classList.add('user-message');
-                messagesDiv.appendChild(messageElement);
+      // Send message
+      messageForm.addEventListener("submit", (e) => {
+        e.preventDefault();
+        const message = messageInput.value.trim();
+        if (message.length > 0) {
+          // Add message to chat
+          const messageElement = document.createElement("div");
+          messageElement.textContent = message;
+          messageElement.classList.add("user-message");
+          messagesDiv.appendChild(messageElement);
 
-                // Send message to server
-                fetch('/chat', {
-                    method: 'POST',
-                    body: new URLSearchParams({ message }),
-                })
-                .then(response => response.json())
-                .then(data => {
-                    // Add bot response to chat
-                    console.log('Data from server:', data);
-                    const responseElement = document.createElement('div');
-                    responseElement.textContent = data.response;
-                    responseElement.classList.add('bot-message');
-                    messagesDiv.appendChild(responseElement);
+          // Send message to server
+          fetch("/chat", {
+            method: "POST",
+            body: new URLSearchParams({ message }),
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              // Add bot response to chat
+              console.log("Data from server:", data);
+              const responseElement = document.createElement("div");
 
-                    displayBotResponse(data.response);
+              responseElement.textContent = data.response;
+              responseElement.classList.add("bot-message");
+              messagesDiv.appendChild(responseElement);
+              displayBotResponse(data.text_response);
 
-                    // Scroll to bottom of chat
-                    chatContainer.scrollTop = chatContainer.scrollHeight;
+              // Scroll to bottom of chat
+              chatContainer.scrollTop = chatContainer.scrollHeight;
 
-                    // Clear input field
-                    messageInput.value = '';
-                    console.log('Message displayed on the website:', data.response);
-                })
-                .catch(error => console.error('Error:', error));
-            }
-        });
-
-        // Initialize SpeechRecognition
-        const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-        const recognition = new SpeechRecognition();
-
-        // Set recognition language
-        recognition.lang = 'en-US';
-
-        // Set recognition result format
-        recognition.interimResults = false;
-
-        // Set recognition maximum alternative
-        recognition.maxAlternatives = 1;
-
-        // Set recognition onresult event listener
-        recognition.onresult = (event) => {
-            // Get transcript from event
-            const transcript = event.results[0][0].transcript;
-
-            // Add message to chat
-            const messageElement = document.createElement('div');
-            messageElement.textContent = transcript;
-            messageElement.classList.add('user-message');
-            messagesDiv.appendChild(messageElement);
-
-            // Send message to server
-            fetch('/chat', {
-                method: 'POST',
-                body: new URLSearchParams({ message: transcript }),
+              // Clear input field
+              messageInput.value = "";
             })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Response from /chat:', data);
-                // Add bot response to chat
-                const responseElement = document.createElement('div');
-                responseElement.textContent = data.response;
-                responseElement.classList.add('bot-message');
-                messagesDiv.appendChild(responseElement);
-                // Display bot response in voice and text output
-                displayBotResponse(data.response);
+            .catch((error) => console.error("Error:", error));
+        }
+      });
 
-                // Scroll to bottom of chat
-                chatContainer.scrollTop = chatContainer.scrollHeight;
+      // Initialize SpeechRecognition
+      const SpeechRecognition =
+        window.SpeechRecognition || window.webkitSpeechRecognition;
+      const recognition = new SpeechRecognition();
 
-                // Speak response using SpeechSynthesis
-                const SpeechSynthesis = window.SpeechSynthesis || window.speechSynthesis;
-                if (SpeechSynthesis && SpeechSynthesis.speak) {
-                    const utterance = new SpeechSynthesisUtterance(data.response);
-                    SpeechSynthesis.speak(utterance);
+      // Set recognition language
+      recognition.lang = "en-US";
 
-                    // Set voice output
-                     voiceOutput.textContent = data.response;
-                        } else {
-                            console.error('SpeechSynthesis is not supported or the speak method is not available.');
-                        }if (voiceOutput) {
-                            voiceOutput.textContent = data.response;
-                         } else {
-                                console.error('Voice output element not found.');
-                        }
-                        // Add text response to chat (optional)
-                        const textResponseElement = document.createElement('div');
-                        textResponseElement.textContent = data.response;
-                        textResponseElement.classList.add('bot-message');
-                        messagesDiv.appendChild(textResponseElement);
+      // Set recognition result format
+      recognition.interimResults = false;
 
-                        // Scroll to bottom of chat
-                        chatContainer.scrollTop = chatContainer.scrollHeight;
+      // Set recognition maximum alternative
+      recognition.maxAlternatives = 1;
 
-                                    });
-        };
+      // Set recognition onresult event listener
+      recognition.onresult = (event) => {
+        // Get transcript from event
+        const transcript = event.results[0][0].transcript;
 
-        // Set voice input button click event listener
-        voiceInputButton.addEventListener('click', () => {
-            // Start recognition
-            recognition.start();
-        });
+        // Add message to chat
+        const messageElement = document.createElement("div");
+        messageElement.textContent = transcript;
+        messageElement.classList.add("user-message");
+        messagesDiv.appendChild(messageElement);
 
-        // Set recognition onend event listener
-        recognition.onend = () => {
-            // Stop recording indicator
-            voiceInputButton.textContent = 'Voice Input';
-            voiceInputButton.style.backgroundColor = '';
-        };
+        // Send message to server
+        fetch("/chat", {
+          method: "POST",
+          body: new URLSearchParams({ message: transcript }),
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            console.log("Response from /chat:", data);
+            // Add bot response to chat
+            const responseElement = document.createElement("div");
+            responseElement.textContent = data.response;
+            responseElement.classList.add("bot-message");
+            messagesDiv.appendChild(responseElement);
+            // Display bot response in voice and text output
+            displayBotResponse(data.text_response);
 
-        // Set recognition onstart event listener
-        recognition.onstart = () => {
-            // Start recording indicator
-            voiceInputButton.textContent = 'Recording...';
-            voiceInputButton.style.backgroundColor = 'red';
-        };
-        function displayBotResponse(response) {
-            // Display bot response in voice output
-            voiceOutput.textContent = response;
-            voiceOutput.style.display = 'block';
+            // Scroll to bottom of chat
+            chatContainer.scrollTop = chatContainer.scrollHeight;
 
-            // Display bot response in text output
-            textOutput.textContent = response;
-            textOutput.style.display = 'block';
-        };
+            // Speak response using SpeechSynthesis
+            const SpeechSynthesis =
+              window.SpeechSynthesis || window.speechSynthesis;
+            if (SpeechSynthesis && SpeechSynthesis.speak) {
+              const utterance = new SpeechSynthesisUtterance(data.response);
+              SpeechSynthesis.speak(utterance);
+
+              // Set voice output
+              voiceOutput.textContent = data.response;
+            } else {
+              console.error(
+                "SpeechSynthesis is not supported or the speak method is not available."
+              );
+            }
+            if (voiceOutput) {
+              voiceOutput.textContent = data.response;
+            } else {
+              console.error("Voice output element not found.");
+            }
+            // Add text response to chat (optional)
+            const textResponseElement = document.createElement("div");
+            textResponseElement.textContent = data.response;
+            textResponseElement.classList.add("bot-message");
+            messagesDiv.appendChild(textResponseElement);
+
+            // Scroll to bottom of chat
+            chatContainer.scrollTop = chatContainer.scrollHeight;
+          });
+      };
+
+      // Set voice input button click event listener
+      voiceInputButton.addEventListener("click", () => {
+        // Start recognition
+        recognition.start();
+      });
+
+      // Set recognition onend event listener
+      recognition.onend = () => {
+        // Stop recording indicator
+        voiceInputButton.textContent = "Voice Input";
+        voiceInputButton.style.backgroundColor = "";
+      };
+
+      // Set recognition onstart event listener
+      recognition.onstart = () => {
+        // Start recording indicator
+        voiceInputButton.textContent = "Recording...";
+        voiceInputButton.style.backgroundColor = "red";
+      };
+      function displayBotResponse(response) {
+        // Create a new div for the bot message
+        const botMessageElement = document.createElement("div");
+        botMessageElement.classList.add("bot-message");
+
+        // Display bot response in text output
+        const textOutputElement = document.createElement("div");
+        textOutputElement.textContent = response;
+        textOutputElement.classList.add("text-output");
+        botMessageElement.appendChild(textOutputElement);
+
+        // Append the entire bot message (including textOutput) to the chat
+        messagesDiv.appendChild(botMessageElement);
+
+        // Scroll to bottom of chat
+        chatContainer.scrollTop = chatContainer.scrollHeight;
+
+        // Set botMsg content
+        console.log("Message displayed on the website:", response);
+      }
     </script>
-</body>
+  </body>
 </html>
